--- a/PI4_4_GARRUCHOFERNANDEZJAVIER/.project
+++ b/PI4_4_GARRUCHOFERNANDEZJAVIER/.project
@@ -3,6 +3,7 @@
 	<name>PI4_4_GARRUCHOFERNANDEZJAVIER</name>
 	<comment></comment>
 	<projects>
+		<project>ParteComun</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
