--- a/PI4_4_GARRUCHOFERNANDEZJAVIER/.classpath
+++ b/PI4_4_GARRUCHOFERNANDEZJAVIER/.classpath
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ParteComun"/>
+	<classpathentry kind="src" path="/AlgoritmosRecursivos"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Grafos"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ParteComun"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/DatosCompartidos"/>
-	<classpathentry kind="src" path="/AlgoritmosRecursivos"/>
+	<classpathentry kind="lib" path="lib/jgrapht-core-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/jgrapht-io-1.2.0-uber.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
